Version 1.0.4 - DEV - Fix config preservation and readonly entity protection